🐛 fix style on mozilla
fix overlapping dropdown options and text overflow not applied properly on items if the label is too long.

--- a/src/multiselect/theme.scss
+++ b/src/multiselect/theme.scss
@@ -2,164 +2,169 @@
 @import "../globals/animations.scss";
 @import "../globals/common.scss";
 :local(.select) {
-  @include customScroll();
-  box-sizing: border-box;
-  border: none;
-  outline: none;
-  display: block;
-  max-width: 250px;
-  min-width: 150px;
-  border-radius: 2px;
-  display: flex;
-  flex-direction: column;
-  padding: 0.5% 0 0 0;
-  color: #6c757d;
+    @include customScroll();
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    display: block;
+    max-width: 250px;
+    min-width: 150px;
+    border-radius: 2px;
+    display: flex;
+    flex-direction: column;
+    padding: 0.5% 0 0 0;
+    color: #6c757d;
 }
 
 :local(.menu) {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  background-color: white;
-  max-height: 150px;
-  overflow: auto;
-  margin-top: 1%;
-  box-shadow: 1px 1px 1px 2px rgba(233, 226, 226, 0.5),
-    0 1px 1px 0 rgba(194, 194, 194, 0.5);
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background-color: white;
+    max-height: 150px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    margin-top: 1%;
+    box-shadow: 1px 1px 1px 2px rgba(233, 226, 226, 0.5), 0 1px 1px 0 rgba(194, 194, 194, 0.5);
 }
 
 :local(.option) {
-  width: 100;
-  padding: 2% 5% 0% 5%;
-  cursor: pointer;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  outline: none;
-  min-height: fit-content;
-  &:hover {
-    background: rgba(71, 233, 243, 0.2);
-  }
+    display: inline-flex;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 2% 5% 0% 5%;
+    cursor: pointer;
+    outline: none;
+    min-height: fit-content;
+    min-height: -moz-fit-content;
+    &:hover {
+        background: rgba(71, 233, 243, 0.2);
+    }
+    &>span {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 }
 
 :local(.item-hover) {
-  background: rgba(71, 233, 243, 0.2);
+    background: rgba(71, 233, 243, 0.2);
 }
 
 :local(.show) {
-  display: flex;
+    display: flex;
 }
 
 :local(.hide) {
-  display: none;
+    display: none;
 }
 
 :local(.selectedInput) {
-  box-sizing: border-box;
-  outline: none;
-  display: flex;
-  flex-wrap: wrap;
-  width: 95%;
-  overflow-y: auto;
-  padding: 0 5%;
-  z-index: 2;
+    box-sizing: border-box;
+    outline: none;
+    display: flex;
+    flex-wrap: wrap;
+    width: 95%;
+    overflow-y: auto;
+    padding: 0 5%;
+    z-index: 2;
 }
 
 :local(.close) {
-  height: 20px;
-  width: 20px;
-  display: flex;
-  align-self: center;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  &:before,
-  &:after {
-    position: absolute;
-    content: "";
-    z-index: 2;
-    border-left: 2px solid #aaa;
-    height: 10px;
-  }
-  &:before {
-    transform: rotate(45deg);
-  }
-  &:after {
-    transform: rotate(-45deg);
-  }
+    height: 20px;
+    width: 20px;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    &:before,
+    &:after {
+        position: absolute;
+        content: "";
+        z-index: 2;
+        border-left: 2px solid #aaa;
+        height: 10px;
+    }
+    &:before {
+        transform: rotate(45deg);
+    }
+    &:after {
+        transform: rotate(-45deg);
+    }
 }
 
 :local(.selectInputWrapper) {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  border-bottom: 2px solid #6c757d;
-  min-height: 2rem;
-  position: relative;
-  outline: none;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    border-bottom: 2px solid #6c757d;
+    min-height: 2rem;
+    position: relative;
+    outline: none;
 }
 
 :local(.selected) {
-  min-width: fit-content;
-  padding: 2px;
-  box-sizing: border-box;
-  div {
-    flex-direction: row !important;
-    display: flex;
-    justify-items: space-between;
-    padding: 0 5% 0 10%;
-    background: #eee;
-    border-radius: 5px;
     min-width: fit-content;
     padding: 2px;
-    position: relative;
     box-sizing: border-box;
     div {
-      flex-direction: row !important;
-      display: flex;
-      justify-items: space-between;
-      padding: 0 5% 0 10%;
-      background: #eee;
-      border-radius: 5px;
-      min-width: fit-content;
+        flex-direction: row !important;
+        display: flex;
+        justify-items: space-between;
+        padding: 0 5% 0 10%;
+        background: #eee;
+        border-radius: 5px;
+        min-width: fit-content;
+        padding: 2px;
+        position: relative;
+        box-sizing: border-box;
+        div {
+            flex-direction: row !important;
+            display: flex;
+            justify-items: space-between;
+            padding: 0 5% 0 10%;
+            background: #eee;
+            border-radius: 5px;
+            min-width: fit-content;
+        }
     }
-  }
 }
 
 :local(.selected-option) {
-  background-color: rgba(71, 233, 243, 0.2);
+    background-color: rgba(71, 233, 243, 0.2);
 }
 
 :local(.arrow) {
-  align-self: flex-start;
-  border: none;
-  border-right: 2px solid #1a237e;
-  border-bottom: 2px solid #1a237e;
-  height: 5px;
-  width: 5px;
-  margin-right: -5px;
-  transition: 0.3s ease;
-  margin-top: 5%;
+    align-self: flex-start;
+    border: none;
+    border-right: 2px solid #1a237e;
+    border-bottom: 2px solid #1a237e;
+    height: 5px;
+    width: 5px;
+    margin-right: -5px;
+    transition: 0.3s ease;
+    margin-top: 5%;
 }
 
 :local(.down) {
-  transform: rotate(45deg);
+    transform: rotate(45deg);
 }
 
 :local(.up) {
-  transform: rotate(-135deg);
+    transform: rotate(-135deg);
 }
 
 :local(.border-animation) {
-  &::after {
-    content: "";
-    position: absolute;
-    bottom: -2px;
-    background-color: $primary-input-active-border !important;
-    height: 2px;
-    @include inputFocus();
-    animation-duration: 0.5s;
-    animation-fill-mode: forwards;
-  }
+    &::after {
+        content: "";
+        position: absolute;
+        bottom: -2px;
+        background-color: $primary-input-active-border !important;
+        height: 2px;
+        @include inputFocus();
+        animation-duration: 0.5s;
+        animation-fill-mode: forwards;
+    }
 }
